src/objects/QPMS__CSMS_History__c.object
<CustomObject>
    <description>Captures Calibration Audit Trail</description>
    <fields>
        <fullName>QPMS__Action__c</fullName>
        <description>Captures the action on the record i.e Created,Updated and Deleted</description>
        <inlineHelpText>Captures the action on the record i.e Created,Updated and Deleted</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Asset Profile</description>
        <inlineHelpText>Lookup to Asset Profile</inlineHelpText>
        <label>Asset Profile</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>CSMS Histories</relationshipLabel>
        <relationshipName>CSMS_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSMS Standard</label>
        <referenceTo>QPMS__CSMS_Standard__c</referenceTo>
        <relationshipLabel>CSMS Histories</relationshipLabel>
        <relationshipName>CSMS_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Calibration</description>
        <inlineHelpText>Lookup to Calibration</inlineHelpText>
        <label>Calibration</label>
        <referenceTo>QPMS__Calibration__c</referenceTo>
        <relationshipName>Calibration_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__FieldAPIName__c</fullName>
        <description>Captures the field API name in audit trail</description>
        <inlineHelpText>Captures the field API name in audit trail</inlineHelpText>
        <label>FieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__FieldName__c</fullName>
        <description>Captures the field name for audit trail</description>
        <inlineHelpText>Captures the field name for audit trail</inlineHelpText>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__HistoryObject__c</fullName>
        <description>Captures the object which is being audit trailed</description>
        <inlineHelpText>Captures the object which is being audit trailed</inlineHelpText>
        <label>HistoryObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration__c</fullName>
                </value>
                <value>
                    <fullName>Maintenance__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_General_Task__c</fullName>
                </value>
                <value>
                    <fullName>Calibration_Criteria__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_General_Sub_Task__c</fullName>
                </value>
                <value>
                    <fullName>Maintenance_Spare_Part__c</fullName>
                </value>
                <value>
                    <fullName>Asset_Profile__c</fullName>
                </value>
                <value>
                    <fullName>Calibrate</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
                <value>
                    <fullName>CSMS_Approver__c</fullName>
                </value>
                <value>
                    <fullName>Asset_Profile_Criteria__c</fullName>
                </value>
                <value>
                    <fullName>Schedule__c</fullName>
                </value>
                <value>
                    <fullName>Maintenance_Criteria__c</fullName>
                </value>
                <value>
                    <fullName>R_R_Study_Profile__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_Standard__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_Standard_Asset__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_Standard_Criteria__c</fullName>
                </value>
                <value>
                    <fullName>CSMS_Standard_General_Task__c</fullName>
                </value>
                <value>
                    <fullName>Variable_Data__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Last_ModifiedBy__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last ModifiedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance</label>
        <referenceTo>QPMS__Maintenance__c</referenceTo>
        <relationshipName>Calibration_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__NewValue__c</fullName>
        <description>New Value of the record</description>
        <inlineHelpText>New Value of the record</inlineHelpText>
        <label>NewValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__OldValue__c</fullName>
        <description>Old Value</description>
        <inlineHelpText>Old Value</inlineHelpText>
        <label>OldValue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Sub_Parent__c</fullName>
        <description>Captures the section of  audit trail</description>
        <inlineHelpText>Captures the section of  audit trail</inlineHelpText>
        <label>Sub Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration Init</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Maintenance Init</fullName>
                </value>
                <value>
                    <fullName>Calibrate</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>Calibration Details</fullName>
                </value>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
                <value>
                    <fullName>Adhoc Action</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Calibration Void</fullName>
                </value>
                <value>
                    <fullName>Maintenance Void</fullName>
                </value>
                <value>
                    <fullName>Spare Part Details</fullName>
                </value>
                <value>
                    <fullName>Calibration Criteria</fullName>
                </value>
                <value>
                    <fullName>Asset Details</fullName>
                </value>
                <value>
                    <fullName>Calibration Approval</fullName>
                </value>
                <value>
                    <fullName>Maintenance Approval</fullName>
                </value>
                <value>
                    <fullName>Calibrate Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Approval</fullName>
                </value>
                <value>
                    <fullName>Adhoc Approval</fullName>
                </value>
                <value>
                    <fullName>Calibration Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Calibration Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Calibrate Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Calibrate Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Closure Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Adhoc Change Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Adhoc Change Due Date Approval</fullName>
                </value>
                <value>
                    <fullName>Asset Profile Criteria</fullName>
                </value>
                <value>
                    <fullName>Asset Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSMS History</label>
    <nameField>
        <displayFormat>CalbrationHistory - {0000}</displayFormat>
        <label>CSMS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMS Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>